Fix alignment in hero container.

--- a/style.css
+++ b/style.css
@@ -86,6 +86,7 @@ body {
     flex:1; 
     flex-wrap: wrap; 
     flex-direction:row; 
+    padding-bottom:84px; 
     
 }
 
